--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 .idea/
 /.ipynb_checkpoints/
+*/__pycache__
 .DS_Store
+*/config.py
+/samples
+*.log
+*.txt
+/blocklm-1.5-generation*
+*.pyc
+selftest.py
